# tangible

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/tangible/: drop.h  execution_manager.h  frame_transform.h  frame_transformer.h  instruction.h  location.h  object.h  operation.h  pick.h  pick_and_place.h  program.h  scene_parser.h  tag.h  tag_extractor.h  visualizer.h
launch/: backend.launch  kinect.launch  pbd_system.launch  pr2_backend.launch  scene_visualization.launch  userdefined_frame.launch
msg/: ActAt.msg  Block.msg  Instruction.msg  Location.msg  Operation.msg  Program.msg  Scene.msg  SceneObject.msg  Surface.msg
src/: compiler.cpp  execution_manager.cpp  execution_manager_node.cpp  frame_transform.cpp  frame_transformer.cpp  object_processing_node.cpp  program.cpp  program_srv.cpp  scene_parser.cpp  scene_visualization_main.cpp  system_main.cpp  system_test.cpp  system_test_grouping.cpp  system_test_matching.cpp  tag.cpp  tag_extractor.cpp  visualizer.cpp
src/feedback/: CMakeLists.txt  package.xml
src/feedback/launch/: feedback.launch
src/feedback_viz/: CMakeLists.txt  package.xml
src/feedback_viz/include/: annotator.h
src/feedback_viz/launch/: feedback_viz.launch
src/feedback_viz/src/: annotator.cpp  main.cpp
src/motion/: CMakeLists.txt  package.xml
src/tangible/: CMakeLists.txt  package.xml
src/tangible/launch/: desktop.launch  development.launch  robot.launch  tangible.launch
src/tangible/scripts/: ar_tag_annotator.py
src/vision/: CMakeLists.txt  package.xml
src/vision/launch/: ar_track.launch  obj_recog.launch  vision.launch
src/vision/scripts/: mock_camera.py  publish_saved_cloud.py
src/vision/src/: process_cloud_main.cpp
srv/: GetBlocks.srv  GetGrasps.srv  GetProgram.srv  GetScene.srv
tangible_msgs/: CMakeLists.txt  package.xml
tangible_msgs/msg/: BoundingBox.msg  Instruction.msg  Mode.msg  Operation.msg  Program.msg  Scene.msg  SceneObject.msg  Surface.msg  Target.msg
tangible_msgs/srv/: ControlMovements.srv  DeleteStaticTransform.srv  GetBlocks.srv  GetGrasps.srv  GetMatchingObjects.srv  GetMovements.srv  GetProgram.srv  GetReleases.srv  GetScene.srv  ReleaseTest.srv  SetStaticTransform.srv  StopMovements.srv  VisualizeObjects.srv
tangible_programming/: CMakeLists.txt  package.xml
tangible_programming/config/: basicVisualization.rviz
tangible_programming/include/tangible/: action_target.h  arm_motion.h  compiler.h  execution_manager.h  grasp_generator.h  grasp_test.h  gripper.h  gripper_marker.h  instruction.h  match_test.h  object_matching.h  objects.h  operation.h  pick_and_place.h  pick_and_release.h  place.h  point.h  program.h  region.h  release_generator.h  release_test.h  scene_parser.h  tag.h  tag_extractor.h  utils.h  visualization.h  visualizer.h
tangible_programming/launch/: ar_markers.launch  arm_motion.launch  kinect.launch  move_group.launch  pr2_backend.launch  pr2_moveit_sensor_manager.launch.xml  release.launch  sensor_manager.launch.xml  userdefined_frame.launch
tangible_programming/scripts/: static_tf.py
tangible_programming/src/: arm_motion.cpp  arm_motion_node.cpp  arm_motion_test.cpp  block_parsing_node.cpp  compiler.cpp  compiler_node.cpp  execution_manager.cpp  execution_manager_node.cpp  frame_transformer.cpp  grasp_generator.cpp  grasp_generator_node.cpp  grasp_srv.cpp  grasp_test.cpp  grasp_test_node.cpp  gripper.cpp  gripper_marker.cpp  match_srv.cpp  match_test.cpp  match_test_node.cpp  move_srv.cpp  object_matching.cpp  object_matching_node.cpp  object_processing_node.cpp  operation.cpp  pick_and_place.cpp  pick_and_release.cpp  point.cpp  program_srv.cpp  release_generator.cpp  release_generator_node.cpp  release_srv.cpp  release_test.cpp  release_test_node.cpp  scene_parser.cpp  scene_srv.cpp  system_test_grouping.cpp  system_test_matching.cpp  tag_extractor.cpp  utils.cpp  visualization.cpp  (+2 more)
tangible_projection/: CMakeLists.txt  package.xml
tangible_projection/include/: annotator.h  projector.h
tangible_projection/launch/: projection.launch
tangible_projection/src/: project_main.cpp  projector.cpp  projector_main.cpp
tangible_projection/src/offline/: save_cloud_main.cpp
utils/: builder.sh  projector_pose.cpp  test.rviz  tosro_script.sh
